[tool.poetry]
name = "gloat-basicmatcher"
version = "0.1.0"
description = ""
authors = ["Aleksander Ambrożkiewicz <aambrozkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^22.3.0"}
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
